--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Frases</title>
+  <title>Frases Motivacionais</title>
 
   <link rel="stylesheet" href="/assets/stylesheets/style.css" />
 </head>
 
 <body>
-  <div class="container">
-    <div class="container__content">
-      <h2 class="container__title">Acalme-se</h2>
+  <div class="container__home">
+    <h2 class="container__title">
+      As melhores frases motivacionais para te ajudar
+    </h2>
 
-      <div class="container__image">
-        <iframe src="https://giphy.com/embed/d7nd6bdypnYjGT1jP3" width="378" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/thedodo-cute-the-dodo-d7nd6bdypnYjGT1jP3">via GIPHY</a></p>
-      </div>
-      
+    <div class="container__home__btns">
+      <a class="btn__page" href="/pages/drink-water.html">Beba Agua</a>
+      <a class="btn__page" href="/pages/focus.html">Tenha foco</a>
+      <a class="btn__page" href="/pages/no-stress.html">Não se estresse</a>
     </div>
   </div>
+
+  <script src="/script.js"></script>
 </body>
 
 </html>
