--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 <body>
   <div class="container__home">
     <h2 class="container__title">
-      As melhores frases motivacionais para te ajudar
+      Escolha o que você precisa!
     </h2>
 
     <div class="container__home__btns">
-      <a class="btn__page" href="/pages/drink-water.html">Beba Agua</a>
-      <a class="btn__page" href="/pages/focus.html">Tenha foco</a>
-      <a class="btn__page" href="/pages/no-stress.html">Não se estresse</a>
+      <a class="btn__page" href="/pages/drink-water.html">Hidrate-se</a>
+      <a class="btn__page" href="/pages/focus.html">Foco no objetivo</a>
+      <a class="btn__page" href="/pages/no-stress.html">Hoje não vou me estressar!</a>
     </div>
+
+    <p>Veja <a class="btn__page" href="/pages/instructions.html">Aqui</a> como instalar no seu navegador!</p>
   </div>
 
   <script src="/script.js"></script>
