--- a/pages/drink-water.html
+++ b/pages/drink-water.html
@@ -13,8 +13,7 @@
 <body>
   <div class="container">
     <div class="container__content">
-      <a class="btn__page" href="/index.html">Inicio</a>
-      <h2 class="container__title">Beba agua</h2>
+      <h2 class="container__title">Beba água</h2>
 
       <span class="container__image">
         <iframe src="https://giphy.com/embed/xThuWpnG8UOeTmFVmg" width="450" height="361" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/jess-cat-drinking-thirsty-xThuWpnG8UOeTmFVmg">via GIPHY</a></p>
