--- a/pages/no-stress.html
+++ b/pages/no-stress.html
@@ -14,8 +14,10 @@
   <div class="container">
     
     <div class="container__content">
-      <a class="btn__page" href="/index.html">Inicio</a>
-      <h2 class="container__title">Hoje não vou me estressar!</h2>
+
+      <h2 class="container__title">
+        Hoje não vou me estressar!
+      </h2>
       <span class="container__image">
         <iframe src="https://giphy.com/embed/d7nd6bdypnYjGT1jP3" width="378" height="361" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/thedodo-cute-the-dodo-d7nd6bdypnYjGT1jP3">via GIPHY</a></p>
       </span>
