relayout da home

--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
-<html lang="pt-br">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Frases Motivacionais</title>
-
-  <link rel="stylesheet" href="/assets/stylesheets/style.css" />
-</head>
-
-<body>
-  <div class="container__home">
-    <h2 class="container__title">
-      Escolha o que você precisa!
-    </h2>
-
-    <div class="container__home__btns">
-      <a class="btn__page" href="/pages/drink-water.html">Hidrate-se</a>
-      <a class="btn__page" href="/pages/focus.html">Foco no objetivo</a>
-      <a class="btn__page" href="/pages/no-stress.html">Hoje não vou me estressar!</a>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frases Motivacionais</title>
+    <link rel="stylesheet" href="/assets/stylesheets/reset.css">
+    <link rel="stylesheet" href="/assets/stylesheets/home.css">
+  </head>
+  <body>
+    <header id="header">
+      <div id="header__container">
+        <h2>Frases Motivacionais</h2>
+        <p>Escolha o que você precisa!</p>
+      </div>
+    </header>
+    <div id="container">
+      <section id="options">
+        <nav id="options__navigation">
+          <a href="/pages/drink-water.html" class="options__navigation___item">
+            Hidrate-se
+          </a>
+          <a href="/pages/drink-water.html" class="options__navigation___item">
+            Foco no objetivo
+          </a>
+          <a href="/pages/drink-water.html" class="options__navigation___item">
+            Hoje não vou me estressar!
+          </a>
+        </nav>
+      </section>
+      <section id="instructions">
+        Veja 
+        <a href="/pages/instructions.html">aqui</a>
+        como instalar no seu navegador!
+      </section>
     </div>
-
-    <p>Veja <a class="btn__page" href="/pages/instructions.html">Aqui</a> como instalar no seu navegador!</p>
-  </div>
-
-  <script src="/script.js"></script>
-</body>
-
+    <footer id="footer">
+      <p>&copy; Todos os direitos reservados</p>
+    </footer>
+  </body>
 </html>
