relayout das demais páginas

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <a href="/pages/drink-water.html" class="options__navigation___item">
             Hidrate-se
           </a>
-          <a href="/pages/drink-water.html" class="options__navigation___item">
+          <a href="/pages/focus.html" class="options__navigation___item">
             Foco no objetivo
           </a>
-          <a href="/pages/drink-water.html" class="options__navigation___item">
+          <a href="/pages/no-stress.html" class="options__navigation___item">
             Hoje não vou me estressar!
           </a>
         </nav>
