--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Instruções</title>
-</head>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frases Motivacionais | Instruções</title>
+    <link rel="stylesheet" href="/assets/stylesheets/reset.css">
+    <link rel="stylesheet" href="/assets/stylesheets/instructions.css">
+  </head>
+  <body>
+    <div id="container">
+      <section id="instructions">
+        <header id="instructions__header">
+          <h2>Como usar as páginas</h2>
+        </header>
 
-<body>
-  <h2 class="container__title">Instruções</h2>
-  <ol>
-    <li>
-      Instale a extensão
-      <a href="https://chrome.google.com/webstore/detail/custom-new-tab-url/mmjbdbjnoablegbkcklggeknkfcjkjia">Custom New
-        Tab URL</a>
-      no Google Chrome
-      <img src="/assets/images/extensao.png" alt="Custom New Tab URL" />
-    </li>
-    <li>
-      Copie o link da página que você escolheu (Exemplo:
-      <a
-        href="https://frases-acalme.netlify.app/pages/drink-water.html">https://frases-acalme.netlify.app/pages/drink-water.html</a>)
-    </li>
-    <li>
-      Na extensão, cole o link da página e clique em save e pronto! Agora quando abrir o navegador vai aparecer a página!
-      <img src="/assets/images/colar-link.png" alt="">
-    </li>
-  </ol>
-</body>
+        <div id="instructions__content">
+          <ol id="instructions__content___list">
+            <li>Escolha uma das páginas e copie o link</li>
+          </ol>
+        </div>
 
+      </section>
+    </div>
+
+    <footer id="footer">
+      <p>&copy; Todos os direitos reservados</p>
+    </footer>
+  </body>
 </html>
