--- a/pages/focus.html
+++ b/pages/focus.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Frases</title>
-
-  <link rel="stylesheet" href="/assets/stylesheets/style.css" />
-</head>
-
-<body>
-  <div class="container">
-    <div class="container__content">
-
-      <h2 class="container__title">Tenha foco</h2>
-
-      <span class="container__image">
-        <iframe src="https://giphy.com/embed/5JCEYvy4M3HEY" width="480" height="361" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/diet-working-out-skinny-5JCEYvy4M3HEY">via GIPHY</a></p>
-      </span>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frases Motivacionais | Hidrate-se</title>
+    <link rel="stylesheet" href="/assets/stylesheets/reset.css">
+    <link rel="stylesheet" href="/assets/stylesheets/pages.css">
+  </head>
+  <body>
+    <div id="container">
+      <section id="content">
+        <header id="content__header">
+          <h2>Tenha foco</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </header>
+        
+        <div id="content__giphy">
+          <iframe src="https://giphy.com/embed/14afmHqKZ3ctsk" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/kim-kardashian-gif-14afmHqKZ3ctsk">via GIPHY</a></p>
+        </div>
+      </section>
     </div>
-  </div>
 
-  <script src="/script.js"></script>
-</body>
-
+    <footer id="footer">
+      <p>&copy; Todos os direitos reservados</p>
+    </footer>
+  </body>
 </html>
