--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frases Motivacionais | Instruções</title>
-    <link rel="stylesheet" href="/assets/stylesheets/reset.css">
-    <link rel="stylesheet" href="/assets/stylesheets/instructions.css">
-  </head>
-  <body>
-    <div id="container">
-      <section id="instructions">
-        <header id="instructions__header">
-          <h2>Como usar as páginas</h2>
-        </header>
 
-        <div id="instructions__content">
-          <ol id="instructions__content___list">
-            <li>Escolha uma das páginas e copie o link</li>
-          </ol>
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Frases Motivacionais | Instruções</title>
+  <link rel="stylesheet" href="/assets/stylesheets/reset.css">
+  <link rel="stylesheet" href="/assets/stylesheets/instructions.css">
+</head>
 
-      </section>
-    </div>
+<body>
+  <div id="container">
+    <section id="instructions">
+      <header id="instructions__header">
+        <h2>Como usar as páginas</h2>
+      </header>
 
-    <footer id="footer">
-      <p>&copy; Todos os direitos reservados</p>
-    </footer>
-  </body>
+      <div id="instructions__content">
+        <ol id="instructions__content___list">
+          <li class="instructions__content___item">
+            Escolha uma das páginas e copie o link
+            <img src="/assets/images/salve-link.jpeg" alt="Copiar o link da página">
+          </li>
+
+          <li class="instructions__content___item">
+            Instale a extensão
+            <a href="https://chrome.google.com/webstore/detail/custom-new-tab-url/mmjbdbjnoablegbkcklggeknkfcjkjia">
+              Custom New Tab URL
+            </a>
+            no Google Chrome
+            <img src="/assets/images/extensao.png" alt="Baixar a extensão">
+          </li>
+
+          <li class="instructions__content___item">
+            Cole o link da página na extensão e clique em save
+            <img src="/assets/images/colar-link.png" alt="Copiar o link da página">
+          </li>
+        </ol>
+
+        <li class="instructions__content___item">
+          Prontinho! Toda vez que você abrir uma aba no navegador a frase estará lá!
+          <img src="/assets/images/resultado.png" alt="Copiar o link da página">
+        </li>
+        </ol>
+      </div>
+
+      <p id="back__home">
+        Voltar a
+        <a href="/index.html">Página Inicial</a>
+      </p>
+    </section>
+  </div>
+
+  <footer id="footer">
+    <p>&copy; Todos os direitos reservados</p>
+  </footer>
+</body>
+
 </html>
