ajustes no layout e frases

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frases Motivacionais</title>
+    <title>Frases | Página Inicial</title>
     <link rel="stylesheet" href="/assets/stylesheets/reset.css">
     <link rel="stylesheet" href="/assets/stylesheets/home.css">
   </head>
   <body>
     <header id="header">
       <div id="header__container">
-        <h2>Frases Motivacionais</h2>
+        <h2>Frases para te ajudar no dia a dia</h2>
         <p>Escolha o que você precisa!</p>
       </div>
     </header>
