--- a/pages/focus.html
+++ b/pages/focus.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frases Motivacionais | Hidrate-se</title>
+    <title>Frases | Foco</title>
     <link rel="stylesheet" href="/assets/stylesheets/reset.css">
     <link rel="stylesheet" href="/assets/stylesheets/pages.css">
   </head>
@@ -12,9 +12,9 @@
     <div id="container">
       <section id="content">
         <header id="content__header">
-          <h2>Tenha foco</h2>
+          <h2>Tenha foco!</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Mantenha a cabeça focada nos seus objetivos e tudo valerá a pena.
           </p>
         </header>
         
