--- a/pages/drink-water.html
+++ b/pages/drink-water.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frases Motivacionais | Hidrate-se</title>
+    <title>Frases | Hidrate-se</title>
     <link rel="stylesheet" href="/assets/stylesheets/reset.css">
     <link rel="stylesheet" href="/assets/stylesheets/pages.css">
   </head>
@@ -12,9 +12,9 @@
     <div id="container">
       <section id="content">
         <header id="content__header">
-          <h2>Beba água</h2>
+          <h2>Beba muita água!</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            É importante se manter hidratado, isso evita que a sua imunidade baixe e te mantém mais focado.
           </p>
         </header>
         
