--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Frases Motivacionais | Instruções</title>
+  <title>Frases | Instruções</title>
   <link rel="stylesheet" href="/assets/stylesheets/reset.css">
   <link rel="stylesheet" href="/assets/stylesheets/instructions.css">
 </head>
@@ -14,7 +14,7 @@
   <div id="container">
     <section id="instructions">
       <header id="instructions__header">
-        <h2>Como usar as páginas</h2>
+        <h2>Como utilizar as páginas</h2>
       </header>
 
       <div id="instructions__content">
