--- a/pages/no-stress.html
+++ b/pages/no-stress.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frases Motivacionais | Hidrate-se</title>
+    <title>Frases | Relaxe</title>
     <link rel="stylesheet" href="/assets/stylesheets/reset.css">
     <link rel="stylesheet" href="/assets/stylesheets/pages.css">
   </head>
@@ -14,7 +14,7 @@
         <header id="content__header">
           <h2>Não se estresse!</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Tenha momentos de tranquilidade, tire um cochilo ou faça algo divertido.
           </p>
         </header>
         
