ajustes nos textos

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <header id="header">
       <div id="header__container">
-        <h2>Frases para te ajudar no dia a dia</h2>
-        <p>Escolha o que você precisa!</p>
+        <h2>Lembretes para uma vida melhor</h2>
+        <p>Escolha um objetivo!</p>
       </div>
     </header>
     <div id="container">
@@ -25,14 +25,19 @@
             Foco no objetivo
           </a>
           <a href="/pages/no-stress.html" class="options__navigation___item">
-            Hoje não vou me estressar!
+            Não me estressar!
           </a>
         </nav>
       </section>
       <section id="instructions">
-        Veja 
-        <a href="/pages/instructions.html">aqui</a>
-        como instalar no seu navegador!
+        <p>
+          Coloque o lembrete com página inicial do seu navegador
+        </p>
+        <p>
+          Veja 
+          <a href="/pages/instructions.html">aqui</a>
+          como fazer!
+        </p>
       </section>
     </div>
     <footer id="footer">
