ajustando a pagina de instruções

--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -20,7 +20,12 @@
       <div id="instructions__content">
         <ol id="instructions__content___list">
           <li class="instructions__content___item">
-            Escolha uma das páginas e copie o link
+            Escolha um dos objetivos
+            <img src="/assets/images/escolha-objetivo.png" alt="Escolha o objetivo">
+          </li>
+
+          <li class="instructions__content___item">
+            Copie o link da página escolhida
             <img src="/assets/images/salve-link.jpeg" alt="Copiar o link da página">
           </li>
 
@@ -47,8 +52,8 @@
       </div>
 
       <p id="back__home">
-        Voltar a
-        <a href="/index.html">Página Inicial</a>
+        Clique para
+        <a href="/index.html">escolher um objetivo</a>
       </p>
     </section>
   </div>
