adicionando um item em instructions

--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -20,6 +20,10 @@
       <div id="instructions__content">
         <ol id="instructions__content___list">
           <li class="instructions__content___item">
+            Acesse <a target="_blank" href="https://frases-acalme.netlify.app/">https://frases-acalme.netlify.app/</a>
+          </li>
+
+          <li class="instructions__content___item">
             Escolha um dos objetivos
             <img src="/assets/images/escolha-objetivo.png" alt="Escolha o objetivo">
           </li>
@@ -31,7 +35,7 @@
 
           <li class="instructions__content___item">
             Instale a extensão
-            <a href="https://chrome.google.com/webstore/detail/custom-new-tab-url/mmjbdbjnoablegbkcklggeknkfcjkjia">
+            <a target="_blank" href="https://chrome.google.com/webstore/detail/custom-new-tab-url/mmjbdbjnoablegbkcklggeknkfcjkjia">
               Custom New Tab URL
             </a>
             no Google Chrome
