ajustes no css da home e tag do google analytics nas demais páginas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/assets/stylesheets/reset.css">
     <link rel="stylesheet" href="/assets/stylesheets/home.css">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PRGR234ZFM"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
@@ -23,7 +23,8 @@
     <header id="header">
       <div id="header__container">
         <h2>Lembretes para uma vida melhor</h2>
-        <p>Escolha um objetivo!</p>
+        <p>A ajuda que você precisava para ter uma rotina mais saudável!</p>
+        <p>Escolha o seu objetivo</p>
       </div>
     </header>
     <div id="container">
@@ -42,12 +43,14 @@
       </section>
       <section id="instructions">
         <p>
-          Coloque o lembrete com página inicial do seu navegador
+          A ideia é escolher um dos objetivos acima e usar como pagina
+          inicial no seu navegador, assim vai ficar mais fácil de você
+          sempre lembrar!
         </p>
         <p>
           Veja 
           <a href="/pages/instructions.html">aqui</a>
-          como fazer!
+          as instruções.
         </p>
       </section>
     </div>
