--- a/pages/focus.html
+++ b/pages/focus.html
@@ -7,6 +7,17 @@
     <title>Frases | Foco</title>
     <link rel="stylesheet" href="/assets/stylesheets/reset.css">
     <link rel="stylesheet" href="/assets/stylesheets/pages.css">
+
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PRGR234ZFM"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PRGR234ZFM');
+  </script>
+
   </head>
   <body>
     <div id="container">
